// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Program /> renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "elevation": 3,
      "marginBottom": 10,
      "padding": 10,
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "paddingTop": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "height": 60,
          "justifyContent": "space-evenly",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "padding": 20,
            "position": "absolute",
            "right": 0,
            "top": -10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#232b2b",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Beginner
        </Text>
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "paddingHorizontal": 20,
            "paddingVertical": 30,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#232b2b",
              "fontSize": 14,
              "textAlign": "right",
            }
          }
        >
          0/1 trainings
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "#f1f1f1",
              "borderRadius": 2,
              "height": 3,
              "marginTop": 5,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#08AEEA",
                  "borderRadius": 5,
                  "width": "50%",
                },
                Object {
                  "width": "0%",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Program /> renders correctly when finished 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "elevation": 3,
      "marginBottom": 10,
      "padding": 10,
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "paddingTop": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "height": 60,
          "justifyContent": "space-evenly",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "padding": 20,
            "position": "absolute",
            "right": 0,
            "top": -10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#232b2b",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Beginner
        </Text>
      </View>
      <View
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "paddingHorizontal": 20,
            "paddingVertical": 30,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#232b2b",
              "fontSize": 14,
              "textAlign": "right",
            }
          }
        >
          2/2 trainings
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "#f1f1f1",
              "borderRadius": 2,
              "height": 3,
              "marginTop": 5,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "#08AEEA",
                  "borderRadius": 5,
                  "width": "50%",
                },
                Object {
                  "width": "100%",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
